updated html and css

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,3 @@
-body{
-  width: 1920px;
-  height: 9097px;
-  background: var(--main-white, #FFF);
-  justify-content: center;
-  align-items: center;
-  display: flex;
-}
 /*industries*/
 .industrijos {
   width: 1920px;
@@ -112,7 +104,7 @@ body{
   left: 120px;
   line-height: 130px;
   position: absolute;
-  color: var(--main-white, #FFF);
+  color: var(--main-white, #fff);
   font-family: "Neue Machina";
   font-size: 100px;
   font-style: normal;
@@ -125,14 +117,14 @@ body{
   left: 1040px;
   line-height: 36px;
   position: absolute;
-  color: rgba(255, 255, 255, 0.70);
+  color: rgba(255, 255, 255, 0.7);
   font-family: "Gilroy";
   font-size: 24px;
   font-style: normal;
   font-weight: 400;
 }
-.textemail{
-  color: var(--main-white, #FFF);
+.textemail {
+  color: var(--main-white, #fff);
   font-family: Gilroy;
   font-size: 24px;
   font-style: normal;
@@ -157,17 +149,17 @@ body{
   align-items: left;
   gap: 28px;
   border-radius: 10px;
-  border: 1px solid var(--main-white, #FFF);
+  border: 1px solid var(--main-white, #fff);
   position: absolute;
   background-color: transparent;
 }
-.ftft{
+.ftft {
   display: flex;
   align-items: center;
   gap: 30px;
 }
-.brieftext{
-  color: var(--main-white, #FFF);
+.brieftext {
+  color: var(--main-white, #fff);
   font-family: "Neue Machina";
   font-size: 20px;
   font-style: normal;
@@ -175,7 +167,7 @@ body{
   line-height: normal;
   text-transform: uppercase;
 }
-.briefimg{
+.briefimg {
   width: 24px;
   height: 24px;
 }
@@ -185,7 +177,7 @@ body{
   border-radius: 70px;
   flex-shrink: 0;
   border-radius: 70px;
-  background: linear-gradient(66deg, #2E2BD0 -67.89%, #7876F2 125.28%);
+  background: linear-gradient(66deg, #2e2bd0 -67.89%, #7876f2 125.28%);
 }
 input[type="text"] {
   width: 700px;
@@ -195,7 +187,7 @@ input[type="text"] {
   position: absolute;
   background: transparent;
   border: 0px;
-  color: rgba(255, 255, 255, 0.40);
+  color: rgba(255, 255, 255, 0.4);
   font-family: "Neue Machina";
   font-size: 32px;
   font-style: normal;
@@ -210,12 +202,12 @@ input[type="email"] {
   position: absolute;
   border: 0;
   background: transparent;
-  color: rgba(255, 255, 255, 0.40);
+  color: rgba(255, 255, 255, 0.4);
   font-family: "Neue Machina";
   font-size: 32px;
   font-style: normal;
   font-weight: 400;
-  line-height: 48px
+  line-height: 48px;
 }
 input[type="telefonas"] {
   width: 700px;
@@ -225,7 +217,7 @@ input[type="telefonas"] {
   position: absolute;
   border: 0;
   background: transparent;
-  color: rgba(255, 255, 255, 0.40);
+  color: rgba(255, 255, 255, 0.4);
   font-family: "Neue Machina";
   font-size: 32px;
   font-style: normal;
@@ -240,7 +232,7 @@ input[type="filas"] {
   background: transparent;
   border: 0;
   position: absolute;
-  color: rgba(255, 255, 255, 0.40);
+  color: rgba(255, 255, 255, 0.4);
   font-family: "Neue Machina";
   font-size: 32px;
   font-style: normal;
@@ -273,19 +265,19 @@ input[type="text1"] {
   align-items: right;
   justify-content: right;
 }
-.gtgt{
+.gtgt {
   display: flex;
   gap: 20px;
   width: 125px;
   height: 24px;
   align-items: center;
 }
-.subimg{
+.subimg {
   width: 24px;
   height: 24px;
 }
-.subtext{
-  color: var(--main-blue, #2E2BD0);
+.subtext {
+  color: var(--main-blue, #2e2bd0);
   font-family: "Neue Machina";
   font-size: 20px;
   font-style: normal;
@@ -293,7 +285,7 @@ input[type="text1"] {
   line-height: normal;
   text-transform: uppercase;
 }
-input[type="filas"]{
+input[type="filas"] {
   width: 700px;
   height: 61.5px;
   top: 622px;
@@ -301,7 +293,7 @@ input[type="filas"]{
   position: absolute;
   background-color: transparent;
 }
-input[type="apibudinimas"]{
+input[type="apibudinimas"] {
   width: 700px;
   height: 61.5px;
   top: 510px;
@@ -312,14 +304,14 @@ input[type="apibudinimas"]{
   font-weight: 400;
   font-size: 32px;
   line-height: 48px;
-  color: rgba(255, 255, 255, 0.40);
+  color: rgba(255, 255, 255, 0.4);
   font-family: "Neue Machina";
   font-style: normal;
 }
-.linija4{
+.linija4 {
   width: 700px;
   top: 61.5px;
   border: 1px;
   position: absolute;
-  color: #FFFFFF;
+  color: #ffffff;
 }
